[package]
name = "grpc-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.7"

[[bin]]
name = "grpc_server"
path = "src/grpc_server.rs"

[[bin]]
name = "grpc_client"
path = "src/grpc_client.rs"
